# cli-modplayer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: audio_effects.hpp  audio_exporter.hpp  config.hpp  file_browser.hpp  file_browser_ui.hpp  note_formatter.hpp  player.hpp  simple_ui.hpp  ui.hpp
src/: audio_effects.cpp  audio_exporter.cpp  config.cpp  file_browser.cpp  file_browser_ui.cpp  main.cpp  note_formatter.cpp  player.cpp  simple_ui.cpp  ui.cpp
tests/: test_note_formatter.cpp
